crates/sui-prover/tests/snapshots/ghost_variable_compiler_checks/ghost_variables_noalias_read_read.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 141
expression: output
---
🦀 No specifications are marked for verification. Nothing to verify.
warning: unused function type parameter
  ┌─ tests/inputs/ghost_variable_compiler_checks/ghost_variables_noalias_read_read.move:5:16
  │
5 │ public fun foo<U, V>() {}
  │                ^ Unused type parameter 'U'.
  │
  = This warning can be suppressed with '#[allow(unused_type_parameter)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning: unused function type parameter
  ┌─ tests/inputs/ghost_variable_compiler_checks/ghost_variables_noalias_read_read.move:5:19
  │
5 │ public fun foo<U, V>() {}
  │                   ^ Unused type parameter 'V'.
  │
  = This warning can be suppressed with '#[allow(unused_type_parameter)]' applied to the 'module' or module member ('const', 'fun', or 'struct')
