crates/sui-prover/tests/snapshots/ghost_variable_compiler_checks/no_declaration.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 151
expression: output
---
exiting with bytecode transformation errors in spec_global_variable_analysis
warning: unused function type parameter
  ┌─ tests/inputs/ghost_variable_compiler_checks/no_declaration.move:5:16
  │
5 │ public fun foo<T>() {}
  │                ^ Unused type parameter 'T'.
  │
  = This warning can be suppressed with '#[allow(unused_type_parameter)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E0011]: undeclared global variable u8:
   ┌─ tests/inputs/ghost_variable_compiler_checks/no_declaration.move:9:5
   │  
 9 │       ghost::declare_global_mut<T, bool>();
   │       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   ·  
20 │ ╭ public fun bar_spec<T>() {
21 │ │     bar<T>()
22 │ │ }
   │ ╰─'

error[E0011]: undeclared global variable u64:
   ┌─ tests/inputs/ghost_variable_compiler_checks/no_declaration.move:10:5
   │  
10 │       ghost::declare_global<u64, bool>();
   │       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   ·  
20 │ ╭ public fun bar_spec<T>() {
21 │ │     bar<T>()
22 │ │ }
   │ ╰─'

error[E0011]: undeclared global variable T:
   ┌─ tests/inputs/ghost_variable_compiler_checks/no_declaration.move:9:5
   │  
 9 │       ghost::declare_global_mut<T, bool>();
   │       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   ·  
20 │ ╭ public fun bar_spec<T>() {
21 │ │     bar<T>()
22 │ │ }
   │ ╰─'
