crates/sui-prover/tests/snapshots/ghost_variable_compiler_checks/no_mut.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 151
expression: output
---
exiting with bytecode transformation errors in spec_global_variable_analysis
warning: unused function type parameter
  ┌─ tests/inputs/ghost_variable_compiler_checks/no_mut.move:5:16
  │
5 │ public fun foo<T>() {}
  │                ^ Unused type parameter 'T'.
  │
  = This warning can be suppressed with '#[allow(unused_type_parameter)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E0013]: immutable global variable T used as mutable:
   ┌─ tests/inputs/ghost_variable_compiler_checks/no_mut.move:9:5
   │
 9 │     ghost::declare_global_mut<T, bool>();
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   ·
20 │     ghost::declare_global<T, bool>();
   │     --------------------------------
