crates/sui-prover/tests/snapshots/ghost_variable_compiler_checks/nospec_declaration.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
🦀 No specifications found in the project. Nothing to verify.
